[kyo-apollo] an apolloGenerate sbt task generates kyo-apollo sources, and kyo-apollo-codegen-it compiles them against the client and runs them
P4-46, P4-56, K-HIGH-66 stage 3.

Problem: nothing in the build ran the generator (the only way was a
hand-written positional runMain) and nothing coupled its string templates to
the API they emit against: kyo-apollo-codegen has no dependsOn(kyo-apollo) by
design and its specs compare emitted text, so a rename in kyo-apollo kept every
codegen spec green and broke the generated code only in a downstream build.

Now: build.sbt defines apolloSchema, apolloPackage, apolloScalarMappings,
apolloClientFields (`Type.field: ScalaType = default` entries) and the
apolloGenerate task (apolloCodegenSettings), which runs CodegenRunner through
kyo-apollo-codegenJVM's own runner and classpath (forked, as kyo-settings forks
run) into Compile / sourceManaged and feeds Compile / sourceGenerators. The new
JVM project kyo-apollo-codegen-it (kyo-apollo-codegen/it, in the JVM aggregate,
not published) generates from codegenExample/schema.graphql on every compile and
compiles the output against kyo-apollo under -Werror. The schema gains an enum
Color, interface Node, types User/Report implementing it, union SearchResult
and Query.node/search/usersByColor. The former DemoClientFields declarations
live on as the gate's apolloClientFields.

Tests: GeneratedClientSpec drives the generated selectors through the real
client (TestHttpEngine, normalized cache keyed via the generated
SchemaIdentities): "interface fields select through implementors" (network and
CacheOnly answers equal), "an unknown enum value decodes to Unknown__, and
encodes back as its name" (TEAL in the response, in the request variables and
through the cache), "union branches, a mapped custom scalar and a nested object
decode from one response". Drift proof (local only, reverted): renaming
SelectionBuilder.obj in kyo-apollo keeps kyo-apollo-codegenJVM/test green and
turns kyo-apollo-code